# anui

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: base_container.h.296930729A3C17F1.idx  concepts.h.9CA96F2A2C50AA23.idx  constraints.h.0C77735EB1C4B980.idx  core.h.703F9F16302ECBA2.idx  floating_window.h.1B0B359CC72CA006.idx  styles.h.DF3115BD91E93040.idx  types.h.A8C9B107649D721F.idx  unique.h.289A5E8E12E33862.idx  window.cpp.2F26E1A766414736.idx  window.h.8CCE0D6CDFE21DAE.idx  windowing.cpp.495F853AD0570C52.idx
example/: CMakeLists.txt  hello_world.cpp
examples/: basic.cpp  test.cpp
include/anui/: Application.h  FloatingWindow.h  Log.h  Point.h  Size.h  Window.h  anui.h  codes.h  constraints.h  core.h  event.h  event_handler.h  events.h  floating_window.h  frame.h  keyboard.h  mapping.h  properties.h  styles.h  unit.h  window.h
include/anui/impl/: types.h
include/anui/msw/: FloatingWindow.h  Window.h  Windows.h  floating_window.h  keyCodes.h  windef.h  winundef.h
include/anui/utils/: base_container.h  concepts.h  unique.h
src/: event_handler.cpp  events.cpp  unit.cpp
src/msw/: Application.cpp  FloatingWindow.cpp  keyboard.cpp  window.cpp
src/x11/: window.cpp
